Issue #7518:  Move substitute definitions of C99 math functions from pymath.c to Modules/_math.c.