Modules/_math.h
@@ -1,4 +1,32 @@
+double _Py_acosh(double x);
+double _Py_asinh(double x);
+double _Py_atanh(double x);
 double _Py_expm1(double x);
+double _Py_log1p(double x);
+
+#ifdef HAVE_ACOSH
+#define m_acosh acosh
+#else
+/* if the system doesn't have acosh, use the substitute
+   function defined in Modules/_math.c. */
+#define m_acosh _Py_acosh
+#endif
+
+#ifdef HAVE_ASINH
+#define m_asinh asinh
+#else
+/* if the system doesn't have asinh, use the substitute
+   function defined in Modules/_math.c. */
+#define m_asinh _Py_asinh
+#endif
+
+#ifdef HAVE_ATANH
+#define m_atanh atanh
+#else
+/* if the system doesn't have atanh, use the substitute
+   function defined in Modules/_math.c. */
+#define m_atanh _Py_atanh
+#endif
 
 #ifdef HAVE_EXPM1
 #define m_expm1 expm1
@@ -6,4 +34,12 @@ double _Py_expm1(double x);
 /* if the system doesn't have expm1, use the substitute
    function defined in Modules/_math.c. */
 #define m_expm1 _Py_expm1
+#endif
+
+#ifdef HAVE_LOG1P
+#define m_log1p log1p
+#else
+/* if the system doesn't have log1p, use the substitute
+   function defined in Modules/_math.c. */
+#define m_log1p _Py_log1p
 #endif
